feat: implementar estándar JPA de identidad, regla de 3 de último minuto y cálculo de eliminados en DTO